--- a/static/scss/index.scss
+++ b/static/scss/index.scss
@@ -1,3 +1,101 @@
-body {
-    background-color: blue;
+body{
+    margin : 0px;
+    
+}
+
+.top{
+    display : grid;
+            grid-template-columns: 70px 1fr 100px;
+            margin : 0px;
+            height: 100px;
+            border-bottom: 1px solid gray;
+    
+    .material-icons{
+        font-size: 30px;
+            text-align: center;
+            margin : 15px;
+            padding-top: 5px;
+    }
+
+    h1{
+        margin : 25px; 
+        text-align: center;
+    }
+
+    .sign{
+        font-size: 18px;
+        text-align: center;
+        height: 30px;
+        padding-top: 35px;
+        text-decoration : none;
+        color: inherit;
+    }
+
+    button{
+        border : none;
+        background-color: white;
+        }
+    
+    .drawer{
+        .drawer_top{
+            display: grid;
+            grid-template-columns: 2fr 1fr;
+
+            h2{
+                margin : 25;
+                }
+        }
+
+
+    }
+}
+
+.main_video_line{
+    margin : 50px;
+    padding: 0px;
+}
+
+.yt_video{
+    display : inline-grid;
+    grid-template-rows: 1fr 50px;
+    height: 250px;
+    border : solid gray 1px;
+    margin-bottom: 10px;
+    
+    .video_thumbnail{
+        display : inline;
+        list-style: none;
+
+        img{
+            border: 3px solid none ;
+            
+        }
+
+        
+    .video_information{
+        font-size: 15px;
+        display : inline-grid;
+        grid-template-rows: 1fr 1fr;
+
+        .material-icons{
+            font-size: 17px;
+        }
+
+        .video_information_sub{
+            display: inline-grid;
+            grid-template-columns: 3.5fr 1fr 1fr;
+            font-size: 15px;
+        }
+
+        .video_information_title{
+            height: 30px;
+            font-size: 15px;
+
+            p{
+                margin : 0px;
+            }
+        }
+
+    }
+    }
 }
