--- a/templates/base.html
+++ b/templates/base.html
@@ -40,6 +40,12 @@
         {% block scripts %}
         <script src = "static\js\night_day.js"></script>
         <script src = "static\js\sidemenu.js"></script>   
+        <script>
+          var i = 0
+          function iValue(value){
+              i = value;
+          }
+      </script>
         {% endblock scripts %}
         
     </body>
