--- a/templates/index.html
+++ b/templates/index.html
@@ -1,4 +1,8 @@
 {% extends "base.html" %}
+{% block auth %}
+<script src="https://www.gstatic.com/firebasejs/ui/6.0.0/firebase-ui-auth.js"></script>
+<link type="text/css" rel="stylesheet" href="https://www.gstatic.com/firebasejs/ui/6.0.0/firebase-ui-auth.css" />
+{% endblock %}
 {% block title %}Index{% endblock %}
 {% block content %}
   <h1>Index</h1>
