--- a/templates/home/_main_video.html
+++ b/templates/home/_main_video.html
@@ -1,6 +1,6 @@
 <list class = "yt_video">
     <div class = "video_thumbnail">                   
-        <a href = "{{base_url}}/video?vid={{value['videoId']}}" target = "_blank">
+        <a href = "{{base_url}}/video?vid={{value['videoId']}}" >
             <img src = "{{value['thumbnail']}}">
         </a><br>
     </div>
