--- a/templates/search.html
+++ b/templates/search.html
@@ -9,8 +9,11 @@
         {% include 'shares/_top.html' %}
 
         {% include 'shares/_search.html' %}
+        
 
-        <!-- body 작성 부분 -->
+        {% include 'search/_search_function.html' %}
+
+
         
         {% include 'shares/_footer.html' %}
 
