--- a/templates/shares/_search.html
+++ b/templates/shares/_search.html
@@ -1,5 +1,5 @@
 <form class = "searchblock" method = "get" action="{{BASE_URL}}/search/">
-    <input type="text" placeholder="검색어 입력" name="keyword" value="">
+    <input class = "searchbox" type="text" placeholder="검색어 입력" name="keyword" value="">
     <button type="submit">
         <span class="material-icons">search</span>
     </button>
