--- a/templates/shares/_top.html
+++ b/templates/shares/_top.html
@@ -20,17 +20,20 @@
             <br>
             <list>
                 <label>카테고리</label>
-                <ul> 
+                <ol> 
                     <li><a href = "http://www.naver.com">영화</a></li>
                     <li><a href = "http://www.naver.com">코미디</a></li>
                     <li><a href = "http://www.naver.com">동물</a></li>
                     <li><a href = "http://www.naver.com">게임</a></li>
                     <li><a href = "http://www.naver.com">스포츠</a></li>
                     <li><a href = "http://www.naver.com">쇼츠</a></li>
-                </ul>
+                </ol>
             </list>
         </ul>
     </div>
-    <h1>Orim</h1>
+    
+    <div class = "orim">
+        <a href = "{{base_url}}/">Orim</a>
+    </div>
     <a class = "sign in" href = "{{base_url}}/login">sign in</a> 
 </div>
