--- a/static/scss/index.scss
+++ b/static/scss/index.scss
@@ -1,5 +1,9 @@
 body{
     margin : 0px;
+    a{
+        text-decoration : none;
+        color: inherit;
+    }
 }
 
 .searchblock{
@@ -11,14 +15,15 @@ body{
     height: 40px;
     display : grid;
     grid-template-columns: 8fr 1fr;
+    
 }
 
 .top{
     display : grid;
-            grid-template-columns: 70px 1fr 100px;
-            margin : 0px;
-            height: 100px;
-            border-bottom: 1px solid gray;
+    grid-template-columns: 70px 1fr 100px;
+    margin : 0px;
+    height: 110px;
+    border-bottom: 1px solid gray;
     
     .material-icons{
         font-size: 30px;
@@ -27,9 +32,12 @@ body{
         padding-top: 5px;
     }
 
-    h1{
+    .orim{
+        font-size: 40px;
+        font-weight: 700;
         margin : 25px; 
         text-align: center;
+            
     }
 
     .sign{
@@ -37,8 +45,7 @@ body{
         text-align: center;
         height: 30px;
         padding-top: 35px;
-        text-decoration : none;
-        color: inherit;
+        
     }
 
     button{
