--- a/static/scss/index.scss
+++ b/static/scss/index.scss
@@ -12,9 +12,13 @@ body{
     margin-right:auto;
     margin-top: 50px;
     width: 500px;
-    height: 40px;
+    height: 30px;
     display : grid;
-    grid-template-columns: 8fr 1fr;
+    grid-template-columns: 2fr 7fr 1fr;
+    .search_select{
+        margin-right: 10px;
+        
+    }
     
 }
 
